example/lib/src/arbs/errors/app_gu.arb
{
  "@@locale": "gu",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "ભૂલ થઇ",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "અનપેક્ષિત ભૂલ આવી",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "બગ રિપોર્ટ સફળતાપૂર્વક મોકલાયેલું છે.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}